# flirone-v4l2

./: CMakeLists.txt
scripts/: load_v4l2loopback.sh  out2.avi  run_as_non_priviledged_user.sh  stream.py  stream_display.py
src/: flirone.c  flirone_stock.c
